# cargo-features = ["edition2024"]

[package]
name = "aries"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
hex = "0.4.3"
reqwest = { version = "0.12.20", features = ["json", "gzip"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1"
url = "2.5.4"
